--- a/website/Templates/home.html
+++ b/website/Templates/home.html
@@ -1,12 +1,46 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
+
 
 {% if user.is_authenticated %}
-	<h1>Wagwan Rasta</h1>
-{% else %}
+	<h1>Records</h1>
+	{% if records %}
+		
+			<table class="table table-striped table-hover table-sm">
+				<thead class="table-dark">
+				<tr>
+			      <th scope="col">ID</th>
+			      <th scope="col">Name</th>
+			      <th scope="col">Email</th>
+			      <th scope="col">Phone</th>
+			      <th scope="col">Address</th>
+			      <th scope="col">City</th>
+			      <th scope="col">State</th>
+			      <th scope="col">ZipCode</th>
+			      <th scope="col">Created_At</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			  	{% for record in records %}
+			  	<tr>
+			  		<td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
+			  		<td>{{ record.first_name}} {{ record.last_name }}</td>
+			  		<td>{{ record.email}}</td>
+			  		<td>{{ record.phone}}</td>
+			  		<td>{{ record.address}}</td>
+			  		<td>{{ record.city}}</td>
+			  		<td>{{ record.state}}</td>
+			  		<td>{{ record.zipcode}}</td>
+			  		<td>{{ record.created_at }}</td>
+			  	</tr>
+			  	{% endfor %}
+			  </tbody>
+			</table>
 
+	{% endif %}
+{% else %}
+<div class="col-md-6 offset-md-3">
 	<h1>Login</h1>
 	<br>
 	<form method="POST" action="{% url 'home' %}">
